🐛 Fix images on mobile

--- a/static/css/snuggle.css
+++ b/static/css/snuggle.css
@@ -543,3 +543,7 @@ img {
 .syndication {
 	float: right;
 }
+
+.post-content img {
+	height: fit-content;
+}
